Bug 69162 - CRASH - Cmd-arrow and Opt-arrow in query designer GUI crashes LibreOffice
Summary: CRASH - Cmd-arrow and Opt-arrow in query designer GUI crashes LibreOffice
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: x86-64 (AMD64) macOS (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.4.0 target:4.3.2
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-10 03:40 UTC by dhorwood+bugs
Modified: 2014-09-05 11:13 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Crash backtrace (77.45 KB, text/plain)
2013-09-12 00:25 UTC, dhorwood+bugs
Details
10.7.5 Crash backtrace (84.14 KB, text/plain)
2013-09-12 07:22 UTC, dhorwood+bugs
Details
accelerator key bt (19.45 KB, text/plain)
2013-09-17 09:51 UTC, Alex Thurgood
Details

Note You need to log in before you can comment on or make changes to this bug.
Description dhorwood+bugs 2013-09-10 03:40:47 UTC
Problem description: 
LibreOffice crashes if you press command-arrow or option-arrow shortcut keys while editing a database query (in the query "design view" edit window, i.e., not the SQL edit window).

Steps to reproduce:
1. Create a new database. Save it somewhere. You don't need to add any data or tables.
2. Click on "Queries" in the main window. Then "Create Query in Design View..."
3. Close the "Add Table or Query" dialog.
3. Click in any cell in the grid that takes text input (i.e., not the "Table" or "Sort" rows, which are drop-down menus).
4. Press option-right/left arrow or command-right/left arrow.

Current behavior:
LibreOffice crashes.

Expected behavior:
The cursor should move to the beginning or end of the word or line. LibreOffice should not crash.

This bug is also present in OpenOffice 4.0.0.
Operating System: Mac OS X
Version: Inherited From OOo
Comment 1 Julien Nabet 2013-09-11 20:04:18 UTC
On pc Debian x86-64 with master updated today or 4.1 sources updated recently, both with a brand new LO profile, I don't reproduce this.

Could you put error logs (see https://wiki.documentfoundation.org/QA/BugReport/Debug_Information#Mac_OSX:_How_to_get_debug_information) in a file and attach it by using this link?
https://bugs.freedesktop.org/attachment.cgi?bugid=69162&action=enter
Comment 2 dhorwood+bugs 2013-09-12 00:25:36 UTC
Created attachment 85676 [details]
Crash backtrace
Comment 3 Julien Nabet 2013-09-12 06:07:38 UTC
On Mac 10.7.5 and LO 4.1.1.2, I don't reproduce this.

What LO version do you use? Could you give a try the last one?
If you still reproduce this, could you rename your LO directory profile (see https://wiki.documentfoundation.org/UserProfile#Mac_OS_X) and try again?
Comment 4 dhorwood+bugs 2013-09-12 07:10:50 UTC
Yes - this is under LO 4.1.1.2. (Build ID: 7e4286b58adc75a14f6d83f53a03b6c11fa2903)

I can reproduce with 10.7.5 and 10.8.4. Both US and Dvorak keyboard layouts.

I tried on two different computers with completely different accounts and clean LO profiles.
Comment 5 dhorwood+bugs 2013-09-12 07:22:43 UTC
Created attachment 85693 [details]
10.7.5 Crash backtrace
Comment 6 Julien Nabet 2013-09-15 08:20:47 UTC
dhorwood: thank you for your feedback

I'll quote the Roman's questionnaire which helped a lot in other bugtrackers:
"
 1) Do you have any accesibility features enabled? Apple’s accessibility
features like “VoiceOver” or “Enable access for assistive devices”, which get
enabled in “System Preferences > Universal Access”, are known to cause many crashes and freezes in LibreOffice. So please try to disable any accesibility features, then check if the problem is still reproducible.

2) Do you have installed any window management/user interface utilities/apps/control panels/extensions for Mac OS X like 
   * AquaSnap                * BetterSnapTool
   * BetterTouchTool         * Breeze
   * Cinch                   * Divvy
   * DoublePane              * Flexiglass
   * HyperDock               * iSnap
   * Moom                    * RightZoom
   * ShiftIt                 * SizeUp
   * SizeWell                * Spectacle
   * Stay                    * TileWindows
   * WindowTidy              * Flavours (from flavours.interacto.net)
... or something similar?

And/or do you use any mouse cursor/pointer utility, i.e. some little application or control panel etc. which animates or replaces etc. the mouse curser/pointer, like
   * LazyMouse?

And/or do you use any special software which could be related to accessibility stuff, e.g. a screen reader, screen magnifier, speech recognition software,
a text-to-speech (dictation) application, or similar?

All these and many similar utilities rely heavily on Mac OS accessibility features and therefore can cause LibreOffice to crash or freeze. So please check if you have installed any utility of this kind and try to disable it
(or to add LibreOffice to the list of excluded applications for the utility,
if there is such a thing).

So please check these possibilities, if any of them helps to make the crash go away, and report the results here.
"

Alex: I put you in cc since you might be interested in this one.
Comment 7 Alex Thurgood 2013-09-15 08:54:23 UTC
This used to happen with the new template manager on OSX, but that got fixed. I will have a llok and see if the trace is the same.

Alex
Comment 8 dhorwood+bugs 2013-09-16 00:16:58 UTC
(In reply to comment #6)

Julien: I have tried on two separate systems, and have ensured that "access for assistive devices" is turned off. I don't think that either system has any of the utilities mentioned in your post. Additionally, I have reproduced the crashes on brand new user accounts on both systems.
Comment 9 Julien Nabet 2013-09-16 19:56:45 UTC
dhorwood: thank you again for your last feedback. I don't have more question for the moment, i revert the status to UNCONFIRMED. Your turn Alex! :-)
Comment 10 Alex Thurgood 2013-09-17 09:02:20 UTC
Confirming on LO 4.1.1.2
Comment 11 Alex Thurgood 2013-09-17 09:03:19 UTC
I see the same crash trace
Comment 12 Alex Thurgood 2013-09-17 09:04:24 UTC
It seems to be an accelerator key mapping problem.
Comment 13 Alex Thurgood 2013-09-17 09:25:48 UTC
Can't test this on OSX master at the moment, as attempting to open the Query Designer causes the whole app to crash with a jnilib loading error.


Alex
Comment 14 Alex Thurgood 2013-09-17 09:30:46 UTC
Stuart and Tor to CC

More accelerator key problems ?

Alex
Comment 15 Alex Thurgood 2013-09-17 09:51:07 UTC
Created attachment 85956 [details]
accelerator key bt

Enclosing backtrace
Comment 16 Alex Thurgood 2013-09-17 09:55:04 UTC
I see this is LO 3.3.4 too, so confirming at least as far back as that.
Comment 17 Julien Nabet 2014-08-15 15:44:39 UTC
I could reproduce the problem with 4.2 sources some days ago.

I'd like to give a try with master sources but I've got a build problem with mariadb part.
Comment 18 Lionel Elie Mamane 2014-09-05 10:41:28 UTC
We fixed the crash, but if that keystroke was supposed to do something useful, it still does not now.
Comment 19 Commit Notification 2014-09-05 10:46:39 UTC
Norbert Thiebaud committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cee813ac6e24b73879312b43695b92fe77b34444

fdo#69162 avoid crashing on Accellerator in poorly initialized context



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 20 Commit Notification 2014-09-05 10:50:10 UTC
Norbert Thiebaud committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=233e6a62d12d2d67089f1934777ac41c9fc88238&h=libreoffice-4-3

fdo#69162 avoid crashing on Accellerator in poorly initialized context


It will be available in LibreOffice 4.3.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 21 Lionel Elie Mamane 2014-09-05 11:13:59 UTC
(In reply to comment #18)
> We fixed the crash, but if that keystroke was supposed to do something
> useful, it still does not now.

Sorry, correction: it correctly goes to begin/end of word/line now.