svtools/source/misc/acceleratorexecute.cxx
@@ -181,8 +181,11 @@ bool AcceleratorExecute::execute(const css::awt::KeyEvent& aAWTKey)
     OUString sCommand = impl_ts_findCommand(aAWTKey);
 
     // No Command found? Do nothing! User isnt interested on any error handling .-)
-    if (sCommand.isEmpty())
+    // or for some reason m_xContext is NULL (which would crash impl_ts_getURLParser()
+    if (sCommand.isEmpty() || !m_xContext.is())
+    {
         return false;
+    }
 
     // SAFE -> ----------------------------------
     ::osl::ResettableMutexGuard aLock(m_aLock);
